Update swagger3 and alibaba coding guidelines