@@ -2,13 +2,14 @@ package com.loktar.util;
 
 import lombok.SneakyThrows;
 import org.apache.pdfbox.Loader;
+import org.apache.pdfbox.io.RandomAccessReadBuffer;
 import org.apache.pdfbox.multipdf.Splitter;
 import org.apache.pdfbox.pdmodel.PDDocument;
-import org.apache.pdfbox.io.RandomAccessReadBuffer;
+
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.Iterator;
 import java.util.List;
 import java.util.UUID;
@@ -18,7 +19,7 @@ public class PDFBoxUtil {
     @SneakyThrows
     public static String splitPDFFromUrl(String pdfUrl,String pdfPath){
         try {
-            InputStream input = new URL(pdfUrl).openStream();
+            InputStream input = new URI(pdfUrl).toURL().openStream();
             RandomAccessReadBuffer randomAccessBuffer = new RandomAccessReadBuffer(input);
             PDDocument document = Loader.loadPDF(randomAccessBuffer);
             Splitter splitter = new Splitter();
